--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "profile.png"
   name             : "James Widdowson"
   pronouns         : # example: "she/her"  
-  bio              : "PhD student at Imperial College London and the University of Oxford (StatML-CDT). I am currently working on the application of foundation models for use in Reinforcement Learning problems - if this sounds interesting, feel free to reach out via email at james.widdowson24[at]imperial.ac.uk"
+  bio              : "PhD student at Imperial College London and the University of Oxford (StatML-CDT) in the Department of Mathematics. 
   location         : "London"
   employer         : "Imperial College London"
   uri              : # URL
@@ -35,7 +35,7 @@ author:
   # Academic websites
   academia         : # URL
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : #
   inspire-hep      : # URL
   impactstory      : # URL
   orcid            : #
