Refactor bio entry for better readability
Updated bio formatting to use multi-line string.

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,8 @@ author:
   avatar           : "profile.png"
   name             : "James Widdowson"
   pronouns         : # example: "she/her"  
-  bio              : "PhD student at Imperial College London and the University of Oxford (StatML-CDT) in the Department of Mathematics. 
+  bio              : >
+    "PhD student at Imperial College London and the University of Oxford (StatML-CDT) in the Department of Mathematics. 
   location         : "London"
   employer         : "Imperial College London"
   uri              : # URL
