Update bio in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   name             : "James Widdowson"
   pronouns         : # example: "she/her"  
   bio              : >
-    "PhD student at Imperial College London and the University of Oxford (StatML-CDT) in the Department of Mathematics. 
+    PhD student at Imperial College London and the University of Oxford (StatML-CDT) in the Department of Mathematics. 
   location         : "London"
   employer         : "Imperial College London"
   uri              : # URL
