--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,6 +14,9 @@ main:
     
   - title: "Blog"
     url: /blog/
+
+  - title: "Teaching"
+    url: /teaching/
     
   - title: "Contact"
     url: /contact/
