--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,8 +12,8 @@ main:
   - title: "About"
     url: /about/
     
-  - title: "Blog"
-    url: /blog/
+  - title: "Research"
+    url: /research/
 
   - title: "Teaching"
     url: /teaching/
